Fin sección 21: Journal app terminada, sin testing

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -38,6 +38,15 @@
     }
 }
 
+.btn-danger {
+    background-color: rgb(226, 60, 60);
+    transition: all 300ms;
+
+    :hover {
+        background-color: darken($color: rgb(226, 60, 60), $amount: 10);
+    }
+}
+
 .btn-block {
     width: 100%;
 }
